@@ -16,6 +16,8 @@ repositories {
 }
 
 dependencies {
+    implementation("io.github.bonigarcia:webdrivermanager:5.3.2")
+    implementation("com.microsoft.playwright:playwright:1.34.0")
     implementation("io.github.bonigarcia:webdrivermanager:5.5.3")
     implementation("com.microsoft.playwright:playwright:1.37.0")
     implementation("com.typesafe:config:1.4.2")
@@ -30,6 +32,10 @@ dependencies {
     implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
 
 
+    implementation("org.springframework:spring-context:6.0.11")
+    implementation("org.springframework.boot:spring-boot-starter:3.1.2")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.1.2")
+    implementation("org.springframework.boot:spring-boot-autoconfigure-processor:3.1.2")
     implementation("org.springframework:spring-context:6.0.12")
     testImplementation("org.springframework.boot:spring-boot-starter-test:3.1.3")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.1.3")
@@ -38,6 +44,12 @@ dependencies {
     testImplementation("org.hsqldb:hsqldb:2.7.2")
     testImplementation("io.qameta.allure:allure-junit5:2.23.0")
     testImplementation("io.qameta.allure:allure-commandline:2.13.9")
+
+    testImplementation("org.springframework.boot:spring-boot-starter-test:3.1.2")
+
+
+//    testImplementation("org.springframework.boot:spring-boot-starter-data-jpa")
+
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:3.1.3")
 }
@@ -51,9 +63,24 @@ tasks.test {
 // Allure configuration
 tasks.withType<Test> {
     useJUnitPlatform()
+    finalizedBy("customAllureReport")
 }
 
-tasks.named<Exec>("allureReport") {
+tasks.register<Exec>("runHeadlessTest") {
+    dependsOn("compileJava")
+    doFirst {
+        val runtimeClasspath = (sourceSets.named("main").get() as SourceSet).runtimeClasspath.joinToString(":")
+        commandLine("java", "-cp", runtimeClasspath, "org.qam.Main")
+    }
+}
+
+tasks.register<Test>("runTestWithoutAllure") {
+    useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+}
+
+tasks.register<Exec>("customAllureReport") {
     dependsOn("test")
     commandLine = listOf("allure", "generate", "build/allure-results", "--clean", "-o", "build/allure-report")
 }
